[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = "mfg1rtz9@duck.com"},
]
dependencies = ["beautifulsoup4==4.9.3", "certifi==2020.12.5", "chardet==4.0.0", "ebooklib==0.17.1", "html5lib==1.1", "idna==2.10", "lxml==4.6.5", "requests==2.25.1", "six==1.15.0", "soupsieve==2.2.1", "urllib3==1.26.5", "webencodings==0.5.1"]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
Homepage = ""
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple/"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
